--- a/作業/作業.csproj
+++ b/作業/作業.csproj
@@ -102,6 +102,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="主畫面.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="主畫面.designer.cs">
+      <DependentUpon>主畫面.cs</DependentUpon>
+    </Compile>
     <Compile Include="北風Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -138,6 +144,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="主畫面.resx">
+      <DependentUpon>主畫面.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="DataSet1.xsc">
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </None>
